--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <p class="alert"><%= alert %></p>
 
     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.username %></strong>.
+      Logged in as <strong> <%= link_to current_user.username, user_path(current_user) %></strong>.
       <%= link_to 'Edit profile', edit_user_registration_path %> |
       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
