Add gem cancancan for handle w/ others authorization stuffs

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,12 @@
   - <%= link_to 'acessar', room.link, target: "_blank" %> <br/>
   - <%= room.language.name %> <br/>
   - <%= room.level %> <br/>
-  <%= link_to 'Edit', edit_room_path(room) %>
-  <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  - <%= time_ago_in_words room.created_at %> <br/>
+  <% if can? :update, room %>
+    <%= link_to 'Edit', edit_room_path(room) %>
+  <% end %>
+  <% if can? :destroy, room %>
+    <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <% end %>
   <hr>
 <% end %>
