--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,17 @@
     <p class="alert"><%= alert %></p>
 
     <% if user_signed_in? %>
-      Logged in as <strong> <%= link_to current_user.username, user_path(current_user) %></strong>.
+      <%= t('application.hello') %> <%= link_to  " #{current_user.username}!", user_path(current_user) %> <br>
       <%= link_to 'Edit profile', edit_user_registration_path %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+      <%= link_to t('application.logout'), destroy_user_session_path, method: :delete %>
     <% else %>
-      <%= link_to "Sign up", new_user_registration_path %> |
-      <%= link_to "Login", new_user_session_path %>
+      <%= link_to t('application.signup'), new_user_registration_path %> |
+      <%= link_to t('application.loginin'), new_user_session_path %>
     <% end %>
+    <br>
+    <strong><%= t 'application.language_text' %>:</strong>
+    <%= link_to_unless_current t('application.language_ptbr'), locale: 'pt-br' %> |
+    <%= link_to_unless_current t('application.language_en'), locale: 'en' %>
 
     <%= yield %>
   </body>
