--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,8 @@
 <% @rooms.each do |room| %>
   <h3> <%= room.user.username %> </h3>
   - <%= link_to 'acessar', room.link, target: "_blank" %> <br/>
-  - <%= room.language.name %> <br/>
-  - <%= room.level %> <br/>
+  - <%= t room.language.name %> <br/>
+  - <%= t room.level %> <br/>
   - <%= t time_ago_in_words room.created_at %> <br/>
   <% if can? :update, room %>
     <%= link_to 'Edit', edit_room_path(room) %>
