Minor changes with i18n

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <% else %>
       <%= link_to t('application.signup'), new_user_registration_path %> |
       <%= link_to t('application.loginin'), new_user_session_path %> |
-      <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
+      <%= link_to t('application.signup_with', kind: 'Google'), user_google_oauth2_omniauth_authorize_path %>
     <% end %>
     <br>
     <strong><%= t 'application.language_text' %>:</strong>
