--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <%= content_tag :body, data: { action: action_name, controller: controller_name } do %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
@@ -27,5 +27,5 @@
     <%= link_to_unless_current t('language_en'), locale: 'en' %>
 
     <%= yield %>
-  </body>
+  <% end %>
 </html>
