--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,18 @@
   </head>
 
   <%= content_tag :body, data: { action: action_name, controller: controller_name } do %>
-    <%= render 'layouts/nav_bar'%>
+    <% unless show_nav_bar?(action_name, controller_name) %>
+      <%= render 'layouts/nav_bar' %>
+    <% end %>
+
     <div class="container">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
-    <%= render 'layouts/footer' %>
+
+    <% unless show_footer?(action_name, controller_name) %>
+      <%= render 'layouts/footer' %>
+    <% end %>
   <% end %>
 </html>
