--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,34 +1,49 @@
-<h2>Sign up</h2>
+<div class="container" id='singup'>
+  <div class="row justify-content-md-center">
+      <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+  			<fieldset>
+  				<h2>Sign Up</h2>
+          <hr class="colorgraph">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+            <div class="form-group">
+              <%= f.label :username %><br />
+              <%= f.text_field :username, autofocus: true, class: 'form-control input-lg', placeholder: "Your username" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :email %><br />
+              <%= f.email_field :email, autofocus: true, class: 'form-control input-lg', placeholder: "Email" %>
+            </div>
+
+            <div class="field">
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "off", class: 'form-control input-lg', placeholder: 'Password' %>
+            </div>
+
+            <div class="field">
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password, autocomplete: "off", class: 'form-control input-lg', placeholder: 'Password' %>
+            </div>
+
+            <hr class="colorgraph">
+            <div class="row">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                  <%= f.submit "Sign up", class: 'btn btn-lg btn-success btn-block' %>
+              </div>
+              <!-- <div class="col-xs-6 col-sm-6 col-md-6">
+                <a href="" class="btn btn-lg btn-primary btn-block">Register</a>
+              </div> -->
+            </div>
+
+          <% end %>
+  			</fieldset>
+      <%= render "users/shared/links" %>
+  	</div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
