Create minimal layout for users index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,9 @@
 @import "font-awesome";
 
 // main
-@import "main/footer";
+@import "main/main";
 @import "main/authentication";
+@import "main/footer";
+
+// shared
+@import "shared/room-card";
