--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,25 +1,19 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Rooms</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Room', new_room_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      <%= render partial: "shared/aside_section"%>
+    </div>
+    <!-- Rooms -->
+    <div class="col-lg-9">
+      <div class="last-rooms">
+        <h1>Rooms</h1>
+        <%= link_to 'Criar nova sala', new_room_url %>
+      </div>
+      Filtros
+      <div class="row">
+        <%= render partial: "shared/room_card", collection: @rooms, as: :room %>
+      </div>
+    </div>
+  </div>
+</div>
