--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<!-- Page Content -->
 <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <h1 class="my-4">Shop Name</h1>
-      <div class="list-group">
-        <a href="#" class="list-group-item">Minhas Salas</a>
-        <a href="#" class="list-group-item">Debates</a>
-        <a href="#" class="list-group-item">Posts</a>
-        <!-- <a href="#" class="list-group-item">Estatisticas</a> -->
-      </div>
+      <%= render partial: "shared/aside_section"%>
     </div>
-    <!-- /.col-lg-3 -->
+    <!-- Rooms -->
     <div class="col-lg-9">
       <div class="last-rooms">
         <h2> Ultimas salas </h2>
@@ -21,9 +12,7 @@
       <div class="row">
         <%= render partial: "shared/room_card", collection: @rooms, as: :room %>
       </div>
-      <!-- /.row -->
+      <%= link_to t('.more_rooms'), rooms_path %>
     </div>
-    <!-- /.col-lg-9 -->
   </div>
-  <!-- /.row -->
 </div>
