--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <%= render partial: "shared/aside_section"%>
+      <div class="aside-user-infos">
+        <img class="card-img-top" src="http://www.freeiconspng.com/uploads/profile-icon-9.png" alt="">
+        <p class="my-4">Shop Name</p>
+      </div>
+
+      <div class="list-group">
+        <a href="#" class="list-group-item">Salas criadas</a>
+        <a href="#" class="list-group-item">Meus debates</a>
+        <a href="#" class="list-group-item">Meus Posts</a>
+        <!-- <a href="#" class="list-group-item">Estatisticas</a> -->
+      </div>
     </div>
     <!-- Rooms -->
     <div class="col-lg-9">
