--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">BNativus</a>
+  <a class="navbar-brand" href="/">BNativus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -19,10 +19,8 @@
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "#{t('application.hello')}, #{current_user.username}!", user_path(current_user), class: 'nav-link' %> <br>
-        </li>
         <li class="nav-item">
-          <%= link_to 'Edit profile', edit_user_registration_path, class: 'nav-link' %>
+          <%= link_to "#{t('application.hello')}, #{current_user.username}!", edit_user_registration_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to t('application.logout'), destroy_user_session_path, method: :delete, class: 'nav-link' %>
