--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,10 @@
   <div class="row">
     <div class="col-lg-3">
       <div class="aside-user-infos">
-        <img class="card-img-top" src="http://www.freeiconspng.com/uploads/profile-icon-9.png" alt="">
-        <p class="my-4">Shop Name</p>
+        <%= link_to(edit_user_registration_path) do %>
+          <img class="card-img-top" src="http://www.freeiconspng.com/uploads/profile-icon-9.png" alt="">
+          <p class="my-4">username</p>
+        <% end %>
       </div>
 
       <div class="list-group">
