--- a/app/assets/stylesheets/shared/room-card.scss
+++ b/app/assets/stylesheets/shared/room-card.scss
@@ -5,6 +5,11 @@
   .card-body {
     padding: 15px;
 
+    .card-created-at {
+      font-size: 12px;
+      color: #b5b5b5;
+    }
+
     h4, h6 {
       margin: 15px 0;
     }
