--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,7 @@
                   <ul>
                     <li> <%= link_to_unless_current t('language_ptbr'), locale: 'pt-br' %> </li>
                     <li> <%= link_to_unless_current t('language_en'), locale: 'en' %> </li>
+                    <li> <%= link_to_unless_current t('language_es'), locale: 'es' %> </li>
                   </ul>
               </div>
               <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
