--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= render 'layouts/nav_bar' %>
     <% end %>
 
-    <div class="container main-div">
+    <div class="container main-div mt-5 mb-5">
       <% if notice %>
         <p class="alert alert-info alert-dismissible fade show">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
