--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,47 +1,96 @@
-<%= form_with(model: room, local: true) do |form| %>
+<div class="create-room-form">
+  <%= form_with(model: room, local: true) do |form| %>
   <% if room.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(room.errors.count, "error") %> prohibited this room from being saved:</h2>
+  <div id="error_explanation">
+    <h2><%= pluralize(room.errors.count, "error") %>
+      prohibited this room from being saved:</h2>
 
-      <ul>
+    <ul>
       <% room.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <li><%= message %></li>
       <% end %>
-      </ul>
-    </div>
+    </ul>
+  </div>
   <% end %>
 
   <div class="form-group">
-    <%= form.label :language %> <br>
+    <%= form.label User.human_attribute_name(:language) %>
+    <br>
     <%= form.select(:language_id, [], {}, { :class => 'custom-select' }) do %>
-      <% @languages.each do |lang| -%>
-        <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
-      <% end %>
+    <% @languages.each do |lang| -%>
+    <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
+    <% end %>
     <% end %>
   </div>
 
   <div class="form-group">
-    <%= form.label :level %> <br>
+    <%= form.label User.human_attribute_name(:level) %>
+    <br>
     <%= form.select(:level, [], {}, { :class => 'custom-select' }) do %>
-      <% select_levels.each do |level| -%>
-        <%= content_tag(:option, level[0], value: level[1]) %>
-      <% end %>
+    <% select_levels.each do |level| -%>
+    <%= content_tag(:option, level[0], value: level[1]) %>
+    <% end %>
     <% end %>
   </div>
 
   <div class="form-group">
     <%= form.label :link %>
+    <small>
+      <a href="" data-toggle="modal" data-target="#exampleModalLong">
+        <%= t ('room_form.what_is_it') %></a>
+    </small>
     <div class="row">
       <div class="col-lg-10">
         <%= form.text_field :link, class: 'form-control', id: 'link-room' %>
       </div>
       <div class="col-lg-2">
-        <button type="button" class="btn btn-info" id="btn-copy"name="button">Copy</button>
+        <button type="button" class="btn btn-info" id="btn-copy" name="button">
+          <%= t ('room_form.copy') %>
+        </button>
       </div>
     </div>
   </div>
-
   <div class="actions">
     <%= form.submit 'Create', class: 'btn btn-success' %>
   </div>
-<% end %>
+  <% end %>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <%= t('room_form.create_room_description') %>:
+          <hr>
+          1.
+          <%= t 'room_form.step_1' %>
+          <a href="https://accounts.google.com/SignUp" target="_blank">Google</a><br>
+          2.
+          <%= t 'room_form.step_2' %>
+          <a href="https://hangouts.google.com" target="_blank">
+            Google Hangout
+          </a><br>
+          <%= image_tag("tutorial.gif", id: 'create-room-tutorial')  %>
+          3.
+          <%= t 'room_form.step_3' %>:
+          <br>
+          4.
+          <%= t 'room_form.step_4' %>
+          <br>
+          5.
+          <%= t 'room_form.step_5' %>
+          <br>
+        </div>
+        <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div> -->
+      </div>
+    </div>
+  </div>
+</div>
