--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="/">BNativus</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Salas </a>
+        <a class="nav-link" href="#"> <%= t 'rooms'%> </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Debates</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Posts</a>
+        <a class="nav-link" href="#"><%= t 'articles'%></a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
@@ -32,7 +32,6 @@
         <li class="nav-item">
           <%= link_to t('application.loginin'), new_user_session_path, class: 'nav-link' %>
         </li>
-        <%#= link_to t('application.signup_with', kind: 'Google'), user_google_oauth2_omniauth_authorize_path, class: 'nav-link' %>
       <% end %>
     </ul>
   </div>
