--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -23,3 +23,4 @@
     <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
   <% end -%>
 <% end -%>
+<%#= link_to t('application.signup_with', kind: 'Google'), user_google_oauth2_omniauth_authorize_path, class: 'nav-link' %>
