--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -9,12 +9,12 @@
       <li class="nav-item active">
         <a class="nav-link" href="#"> <%= t 'rooms'%> </a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="#">Debates</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#"><%= t 'articles'%></a>
-      </li>
+      </li> -->
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
