--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id='singup'>
   <div class="row justify-content-md-center">
-      <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
   			<fieldset>
   				<h2>Sign Up</h2>
           <hr class="colorgraph">
@@ -20,10 +20,10 @@
 
             <div class="field">
               <%= f.label :password %>
-              <% if @minimum_password_length %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
-              <% end %><br />
               <%= f.password_field :password, autocomplete: "off", class: 'form-control input-lg', placeholder: 'Password' %>
+              <% if @minimum_password_length %>
+                <small class="form-text text-muted"><%= @minimum_password_length %> characters minimum</small>
+              <% end %><br />
             </div>
 
             <div class="field">
@@ -36,9 +36,6 @@
               <div class="col-xs-6 col-sm-6 col-md-6">
                   <%= f.submit "Sign up", class: 'btn btn-lg btn-success btn-block' %>
               </div>
-              <!-- <div class="col-xs-6 col-sm-6 col-md-6">
-                <a href="" class="btn btn-lg btn-primary btn-block">Register</a>
-              </div> -->
             </div>
 
           <% end %>
