--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -15,7 +15,7 @@
 
             <div class="form-group">
               <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true, class: 'form-control input-lg', placeholder: "Email" %>
+              <%= f.email_field :email, class: 'form-control input-lg', placeholder: "Email" %>
             </div>
 
             <div class="field">
