--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,24 +14,7 @@
     <% end %>
 
     <div class="container main-div mt-5 mb-5">
-      <% if notice %>
-        <p class="alert alert-info alert-dismissible fade show">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <%= notice %>
-        </p>
-      <% end %>
-      <% if alert %>
-        <p class="alert alert-danger alert-dismissible fade show">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <%= alert %>
-        </p>
-      <% end %>
-
-      <%= raw flash_message %>
+      <%= render 'layouts/flash_messages' %>
       <%= yield %>
     </div>
 
