--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -13,9 +13,27 @@
     <%= f.email_field :email, class: 'form-control input-lg', placeholder: "Email" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :level %><br />
+    <%= f.select(:level, [], {}, { :class => 'custom-select' }) do %>
+      <% select_levels('number').each do |level| -%>
+        <%= content_tag(:option, level[0], value: level[1]) %>
+      <% end %>
+    <% end %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :country %><br />
+    <%= f.text_field :country, autofocus: true, class: 'form-control input-lg', placeholder: "Country" %>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
+  <hr>
+
+  <h4> Account </h4>
 
   <div class="form-group">
     <%= f.label :password %>
@@ -29,11 +47,6 @@
   <div class="form-group">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control input-lg', placeholder: "Password Confirmation" %>
-  </div>
-
-  <div class="form-group">
-
-    <small class="form-text text-muted">(we need your current password to confirm your changes)</small>
   </div>
 
   <div class="form-group">
