Remove feature for update password
I found a error for update password, for this reason, for now I remove this feature. In the future I fix

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_with(model: user, local: true) do |form| %>
+<h2> <%= t 'application.settings' %> </h2>
+
+<%= form_with(model: user, local: true) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <ul>
@@ -9,7 +11,38 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true, class: 'form-control input-lg', placeholder: "Your username" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, class: 'form-control input-lg', placeholder: "Email" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :level %><br />
+    <%= f.select(:level, [], {}, { :class => 'custom-select' }) do %>
+      <% select_levels('number').each do |level| -%>
+        <%= content_tag(:option, level[0], value: level[1]) %>
+      <% end %>
+    <% end %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :country %><br />
+    <%= f.text_field :country, autofocus: true, class: 'form-control input-lg', placeholder: "Country" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit "Update", class: 'btn btn-success' %>
   </div>
 <% end %>
+
+  <hr>
+  <h4> Account </h4>
+
+  <!-- FIXME: change password -->
+
+  <%= button_to "Cancel my account", registration_path(user), data: { confirm: t('sure?') }, method: :delete, class: 'btn btn-danger' %>
