--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -19,8 +19,7 @@
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li class="nav-item">
-        <li class="nav-item">
-          <%= link_to "#{t('application.hello')}, #{current_user.username}!", edit_user_registration_path, class: 'nav-link' %>
+          <%= link_to "#{t('application.hello')}, #{current_user.username}!", edit_user_path(current_user), class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to t('application.logout'), destroy_user_session_path, method: :delete, class: 'nav-link' %>
