--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -11,17 +11,17 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label User.human_attribute_name(:language) %>
+    <%= form.label Room.human_attribute_name(:language) %>
     <br>
       <%= form.select(:language_id, [], {}, { :class => 'custom-select' }) do %>
-        <% @languages.each do |lang| -%>
-        <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
+        <% Language.pluck(:name, :id).each do |lang| -%>
+          <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
+        <% end %>
       <% end %>
-    <% end %>
   </div>
 
   <div class="form-group">
-    <%= form.label User.human_attribute_name(:level) %>
+    <%= form.label Room.human_attribute_name(:level) %>
     <br>
     <%= form.select(:level, [], {}, { :class => 'custom-select' }) do %>
       <% select_levels('string').each do |level| -%>
