--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,17 +22,39 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :level %><br />
-    <%= f.select(:level, [], {}, { :class => 'custom-select' }) do %>
-      <% select_levels('number').each do |level| -%>
-        <%= content_tag(:option, level[0], value: level[1]) %>
-      <% end %>
-    <% end %>
-  </div>
-
-  <div class="form-group">
     <%= f.label :country %><br />
     <%= f.text_field :country, autofocus: true, class: 'form-control input-lg', placeholder: "Country" %>
+  </div>
+  <hr>
+  <div class="form-group">
+    <label for=""> idioma que você domina </label>
+    <br>
+    <%= f.fields_for :user_known_languages do |ff| %>
+      <div class="row">
+        <div class="col-lg-4">
+          <%= ff.label :language %><br>
+          <%= ff.select(:known_languages_id, [], {}, { :class => 'custom-select' }) do %>
+            <% Language.pluck(:name, :id).each do |lang| -%>
+              <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="col-lg-4">
+          <%= ff.label :speak %><br />
+          <%= ff.select(:speak, [], {}, { :class => 'custom-select' }) do %>
+            <%= options_for_select(select_levels('number'), 2) %>
+          <% end %>
+        </div>
+        <div class="col-lg-4">
+          <%= ff.label :write %><br />
+          <%= ff.select(:write, [], {}, { :class => 'custom-select' }) do %>
+            <% select_levels('number').each do |level| -%>
+              <%= content_tag(:option, level[0], value: level[1]) %>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
   </div>
 
   <div class="form-group">
