--- a/app/views/users/more_informations.html.erb
+++ b/app/views/users/more_informations.html.erb
@@ -11,12 +11,37 @@
               <%= f.text_field :country, autofocus: true, class: 'form-control input-lg', placeholder: "Country" %>
             </div>
 
+            <!-- <div class="form-group">
+              <label for="">Qual lingua você está estudando?</label>
+            </div> -->
+
             <div class="form-group">
-              <%= f.label :level %><br />
-              <%= f.select(:level, [], {}, { :class => 'custom-select' }) do %>
-                <% select_levels('number').each do |level| -%>
-                  <%= content_tag(:option, level[0], value: level[1]) %>
+              <label for=""> lingua que você domina </label>
+              <br>
+              <%= f.fields_for :user_known_languages do |ff| %>
+                <%= ff.select(:known_languages_id, [], {}, { :class => 'custom-select' }) do %>
+                  <% Language.pluck(:name, :id).each do |lang| -%>
+                    <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
+                  <% end %>
                 <% end %>
+
+                <div class="form-group">
+                  <%= ff.label :speak %><br />
+                  <%= ff.select(:speak, [], {}, { :class => 'custom-select' }) do %>
+                    <% select_levels('number').each do |level| -%>
+                      <%= content_tag(:option, level[0], value: level[1]) %>
+                    <% end %>
+                  <% end %>
+                </div>
+
+                <div class="form-group">
+                  <%= ff.label :write %><br />
+                  <%= ff.select(:write, [], {}, { :class => 'custom-select' }) do %>
+                    <% select_levels('number').each do |level| -%>
+                      <%= content_tag(:option, level[0], value: level[1]) %>
+                    <% end %>
+                  <% end %>
+                </div>
               <% end %>
             </div>
 
