--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -13,20 +13,14 @@
   <div class="form-group">
     <%= form.label Room.human_attribute_name(:language) %>
     <br>
-      <%= form.select(:language_id, [], {}, { :class => 'custom-select' }) do %>
-        <% Language.pluck(:name, :id).each do |lang| -%>
-          <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
-        <% end %>
-      <% end %>
+    <%= form.select(:known_languages_id, @languages, {}, { class: 'custom-select' }) %>
   </div>
 
   <div class="form-group">
     <%= form.label Room.human_attribute_name(:level) %>
     <br>
     <%= form.select(:level, [], {}, { :class => 'custom-select' }) do %>
-      <% select_levels('string').each do |level| -%>
-        <%= content_tag(:option, level[0], value: level[1]) %>
-      <% end %>
+      <%= options_for_select(select_levels('string')) %>
     <% end %>
   </div>
 
