--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,34 +27,30 @@
   </div>
   <hr>
   <div class="form-group">
-    <label for=""> idioma que você domina </label>
+    <h5 for=""> idioma que você domina </h5>
     <br>
     <%= f.fields_for :user_known_languages do |ff| %>
       <div class="row">
         <div class="col-lg-4">
           <%= ff.label :language %><br>
-          <%= ff.select(:known_languages_id, [], {}, { :class => 'custom-select' }) do %>
-            <% Language.pluck(:name, :id).each do |lang| -%>
-              <%= content_tag(:option, t(lang[0]), value: lang[1]) %>
-            <% end %>
-          <% end %>
+          <%= ff.select(:known_languages_id, @languages, {}, { class: 'custom-select' }) %>
         </div>
         <div class="col-lg-4">
           <%= ff.label :speak %><br />
           <%= ff.select(:speak, [], {}, { :class => 'custom-select' }) do %>
-            <%= options_for_select(select_levels('number'), 2) %>
+            <%= options_for_select(select_levels('number'), ff.object.speak) %>
           <% end %>
         </div>
         <div class="col-lg-4">
           <%= ff.label :write %><br />
           <%= ff.select(:write, [], {}, { :class => 'custom-select' }) do %>
-            <% select_levels('number').each do |level| -%>
-              <%= content_tag(:option, level[0], value: level[1]) %>
-            <% end %>
+            <%= options_for_select(select_levels('number'), ff.object.write) %>
           <% end %>
         </div>
       </div>
+      <br>
     <% end %>
+
   </div>
 
   <div class="form-group">
